# crypto-rmt

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb
scripts/: fetch_data.py
src/crypto_rmt/: __init__.py  clustering.py  dynamics.py  io.py  plotting.py  rmt.py
tests/: test_clustering.py  test_dynamics.py  test_io.py  test_plotting.py  test_rmt.py
