[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-rmt"
version = "0.1.0"
description = "Random Matrix Theory applied to cryptocurrency correlations: Marchenko–Pastur noise filtering, eigenvalue analysis, and hierarchical clustering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fatemeh Saghian", email = "fatemehsaghian.at@gmail.com" }]
keywords = ["random-matrix-theory", "econophysics", "cryptocurrency", "time-series", "correlation-matrix"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "black>=23.0",
]

[project.urls]
Repository = "https://github.com/fatemeh-studio/crypto-rmt"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pep8-naming, pydocstyle, pyupgrade
select = ["E", "F", "I", "N", "D", "UP"]
ignore = ["D203", "D213"]  # avoid conflicting docstring rules

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
